Generic-fy Workspace so it's windows always think the parent is of its type. May turn out badly down the line, we'll find out.